# obofoundry.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
ci/travis/: deploy.sh  script.sh  setup.sh
src/: lib.rs
tests/: lib.rs
